--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,4 @@
+auxiliary.org-nbphpcouncil-modules-php-yii.enabled=true
 include.path=\
     ${php.global.include.path}:\
     C:\\wamp\\www\\yii\\framework\\
